# python-compute

./: .gitignore  CMakeLists.txt  DepthCamera_2025-12-12-01-38-15.json  DepthCamera_2025-12-12-01-39-37.json  LICENSE  RenderOption_2025-12-12-01-37-58.json  pyproject.toml
src/core/camera/: camera.py
src/core/geometry/: triangle_mesh.py
src/core/scene/: scene.py
src/loader/: gltf_loader.py  scene_loader.py
src/python_raytracer/: main.py
src/python_raytracer/bvh/: bvh.py
src/python_raytracer/c_functions/: aabb.cpp
src/python_raytracer/c_functions/bvh/: _bvh.cpp
src/python_raytracer/c_functions/c_python/: numpy_c.h
src/python_raytracer/core/bvh/: _bvh.cpp  bvh.py
src/python_raytracer/core/geometry/: bounds.py  ray.py  transformation.py  triangle.py  triangle_mesh.py  vector.py
src/python_raytracer/core/log/: logger.py
src/python_raytracer/core/material/: pbr_material.py
src/python_raytracer/core/math/: quaternion.py
src/python_raytracer/core/renderer/: renderer.py
src/python_raytracer/cudaloader/: cudaloader.py  loader.py
src/python_raytracer/loader/: gltf_loader.py  scene_loader.py
src/python_raytracer/pathtracer/: pathtracer.py
src/python_raytracer/pathtracer/cuda/: CMakeLists.txt  common.cu  common1.cu  intersect.cu  trace.cu
src/python_raytracer/pathtracer/cuda/folder_1/: include_1.cu
src/python_raytracer/pathtracer/cuda/include/: algo.cuh  bounds.cuh  debug.cuh  intersection.cuh  ray.cuh  trianglemesh.cuh
src/python_raytracer/pathtracer/cuda/include/math/: transform.cuh  vector.cuh
src/python_raytracer/plots/: o3dplots.py
src/python_raytracer/scene/: node.py  scene.py
src/tests/: cudaloader_test.py  cupy_test.py  numpy_test.py
tests/: cupy_test.py
