[build-system]
requires = [
   "scikit-build-core",
   "setuptools>=61",
   "wheel",
   "pybind11>=2.10",
   "numpy>=1.23",
]
build-backend = "scikit_build_core.build"

[project]
name = "python_raytracer"
version = "0.1.0"
description = ""
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "open3d",
    "trimesh",
    "Pillow",
    "cupy",
]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = true

